[workspace]
resolver = "2"
members = ["yield_vault", "zap", "options", "aa_recovery", "aa_factory", "settlement", "intent_swap", "dutch_auction", "liquid_staking", "emission_controller", "strategies/delta_neutral", "stableswap", "stealth_addresses", "merkle_distributor", "isolated_lending", "ve_tokenomics", "stablecoin_manager", "optimistic_governance", "streaming_payments", "storage_helpers"]

[profile.release]
opt-level = "z"
overflow-checks = true
lto = true
