[package]
name = "ve_tokenomics"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "22.0.0"
soroban-token-sdk = "22.0.0"
storage_helpers = { path = "../storage_helpers" }

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
proptest = "1.4.0"
